[package]
name = "cargo-nobackup"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
concread = "0.5.10"
flexi_logger = "0.31.8"
log = "0.4.29"
mimalloc = "0.1.48"
rayon = "1.11.0"
shellexpand = "3.1.1"
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "sync",
    "time",
] }
